--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <h1>OLÁ, EU SOU O JOSÉ NILMAR</h1>
         <h3>Aqui você encontra algumas informações sobre mim</h3>
         <div class="fotos-perfil">
-            <img src="C:\Users\caio\Pictures\IMG_0859.jpg" alt="Foto de perfil do Nilmar">
+            <img src="https://github.com/xDEVxNilmar/Portif-lio/blob/main/imagens%20pagina%20html/IMG_0859.jpg?raw=true" alt="Foto de perfil do Nilmar">
         </div>
     </header> 
 
@@ -401,3 +401,4 @@
     </main>
 </body>
 </html>
+
