--- a/index.html
+++ b/index.html
@@ -27,6 +27,28 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Sombra mais visível no modo escuro */
             border-radius: 10px;
         }
+        /* Estilo para a mensagem da página alternativa */
+.alternativa-page {
+    text-align: center;
+    padding: 15px;
+    margin: 20px auto;
+    background-color: #3e3e60; /* Fundo escuro sutil */
+    border: 1px solid #0f3460;
+    border-radius: 8px;
+    max-width: 800px;
+}
+
+.alternativa-page a {
+    color: #90d4ff; /* Cor de destaque azul claro */
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.alternativa-page a:hover {
+    color: white;
+    text-decoration: underline;
+}
 
         /* ----------------------------------------------------- */
         /* 2. ESTILO DO CABEÇALHO */
@@ -306,6 +328,10 @@
             <li><a href="#hobbies">Hobbies</a></li>
             <li><a href="#redes-sociais">Redes Sociais</a></li>
             <li><a href="#fale-comigo">Fale Comigo</a></li>
+            <div class="alternativa-page">
+    <p>Quer ver a versão do meu código apenas com **HTML simples?**</p>
+    <a href="basico.html" target="_blank">Clique aqui para a versão HTML Básico</a>
+</div>
         </ul>
     </nav>
 
@@ -401,5 +427,6 @@
     </main>
 </body>
 </html>
+
 
 
