--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
 <body>
     <header class="cabecalho-principal"> 
         <h1>OLÁ, EU SOU O JOSÉ NILMAR</h1>
+        <h3>Desenvolvedor Web e Mobile</h3> 
         <h3>Aqui você encontra algumas informações sobre mim</h3>
         <div class="fotos-perfil">
             <img src="imagens/IMG_0859.jpg" alt="Foto de perfil do Nilmar">
@@ -536,3 +537,4 @@
     </footer>
 </body>
 </html>
+
