Update profile page with new content and styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil - José Nilmar</title>
+    <title>Perfil - Nilmar Desenvolverdor Web e Mobile </title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
@@ -391,7 +391,7 @@
             <img src="imagens/IMG_0859.jpg" alt="Foto de perfil do Nilmar">
         </div>
         <div class="info-cabecalho">
-            <h1>OLÁ, EU SOU O JOSÉ NILMAR</h1>
+            <h1>OLÁ, EU SOU O NILMAR</h1>
             <h3>Desenvolvedor Web e Mobile</h3> 
             <h3>Aqui você encontra algumas informações sobre mim</h3>
         </div>
@@ -525,3 +525,4 @@
     </footer>
 </body>
 </html>
+
